[gd_scene load_steps=11 format=2]

[ext_resource path="res://lander_mk2.gd" type="Script" id=1]
[ext_resource path="res://eagle.png" type="Texture" id=2]
[ext_resource path="res://smoke_white.png" type="Texture" id=3]
[ext_resource path="res://rc_thruster_particles.tres" type="Material" id=4]
[ext_resource path="res://space_theme_ui/barHorizontal_red_mid.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0.405594, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 256

[sub_resource type="Curve" id=3]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

resource_name = "MainEngineParticles"
render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 10.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.12
angular_velocity = 0.0
angular_velocity_random = 0.78
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = SubResource( 4 )
radial_accel = -53.38
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 100.0
damping_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.75
scale_random = 1.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 1.3
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Initial Velocity", "Resource", "Scale", "Spread" ]

[node name="MoonLander" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.25
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "collision" ]
main_engine_thrust = 80
active = false
rc_thrust = 100
fuel_capacity = 200
rc_fuel_capacity = 50
damage_treshhold = 10
inventory_space = 5
credits_balance = 100

[node name="MainBody" type="CollisionPolygon2D" parent="." index="0"]

rotation = -1.57079
build_mode = 0
polygon = PoolVector2Array( 10.7852, -1.22117, 9.33586, -5.31353, 6.18132, -8.72384, 6.01082, -12.9867, -7.6304, -13.2425, -5.41371, -10.429, -5.15794, -6.50714, -7.37463, -7.786, -8.31247, -4.80199, -5.41371, -3.18209, -5.60654, -0.980197 )
_sections_unfolded = [ "Transform" ]

[node name="MainBodySprite" type="Sprite" parent="." index="1"]

position = Vector2( -6.49268, -0.36018 )
rotation = -1.57079
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 0, 31, 15 )
_sections_unfolded = [ "Region" ]

[node name="LandingGear" type="CollisionPolygon2D" parent="." index="2"]

rotation = -1.57079
build_mode = 0
polygon = PoolVector2Array( -17.1793, 13.1874, -14.7068, 13.1874, -11.4923, 6.83812, -8.21777, 6.67354, -8.21781, 0.370482, 5.91908, 0.730569, 5.91911, 6.7635, 11.1417, 6.76347, 14.9629, 13.4431, 18.0321, 13.3579, 10.9615, -0.349991, -8.12777, -0.620005, -11.467, -0.368591 )

[node name="LandingGearSprite" type="Sprite" parent="." index="3"]

position = Vector2( 6.58346, -0.606487 )
rotation = -1.57079
texture = ExtResource( 2 )
offset = Vector2( 0.0238289, 0.980224 )
region_enabled = true
region_rect = Rect2( 2, 15, 31, 12 )
_sections_unfolded = [ "Region" ]

[node name="Engine" type="CollisionPolygon2D" parent="." index="4"]

rotation = -1.57079
build_mode = 0
polygon = PoolVector2Array( -7.22728, 7.39389, -1.9147, 7.39386, -2.00472, 10.7255, 1.50699, 10.7255, 1.49373, 7.18943, 4.29832, 7.12368, 4.02815, -0.530039, -7.22733, -0.620011 )

[node name="EngineSprite" type="Sprite" parent="." index="5"]

visible = false
rotation = -1.57079
texture = ExtResource( 2 )

[node name="EngineParticles" type="Particles2D" parent="." index="6"]

position = Vector2( 12, 1 )
emitting = false
amount = 50
lifetime = 1.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.3
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 8
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="RCThrusterParticles_Left" type="Particles2D" parent="." index="7"]

position = Vector2( -9.00001, -9 )
rotation = 4.97418
emitting = false
amount = 100
lifetime = 0.15
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.3
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = ExtResource( 4 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 8
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="RCThrusterParticles_Right" type="Particles2D" parent="." index="8"]

position = Vector2( -9.00002, 8.99998 )
rotation = 1.309
emitting = false
amount = 100
lifetime = 0.15
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.3
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = ExtResource( 4 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 8
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="RayCast2D" type="RayCast2D" parent="." index="9"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1000 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Ray" type="Sprite" parent="." index="10"]

visible = false
position = Vector2( 1.41918, 0.734558 )
scale = Vector2( 13.3166, 0.136402 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_MoonLander_body_entered"]


